<resources>
    <string name="app_name">Project3_v2</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="vin">Vin:</string>
    <string name="last_update">Last Update:</string>
    <string name="car_description">car description</string>
    <string name="_0_00">$ 0.00</string>
    <string name="make_model">Make - Model</string>
    <string name="image_of_listed_car">image of listed car</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_fragment_loaded">New Fragment loaded</string>
</resources>