<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CarDetailsActivity">

        <ImageView
            android:id="@+id/carImageView"
            android:layout_width="0dp"
            android:layout_height="248dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_of_listed_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/makeModelTextView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:text="@string/make_model"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="174dp"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:gravity="right"
                android:text="@string/_0_00"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="412dp"
            android:layout_height="370dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carImageView"
            app:layout_constraintVertical_bias="0.963">

            <TextView
                android:padding="10dp"
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_height="182dp"
                android:text="@string/car_description"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/vinTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.777" />

            <TextView
                android:id="@+id/vinTextView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginBottom="24dp"
                android:text="@string/vin"
                app:layout_constraintBottom_toTopOf="@+id/lastUpdateTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/lastUpdateTextView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginBottom="60dp"
                android:text="@string/last_update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>